<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="24dp"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText android:id="@+id/etUsername"
        android:autofillHints="User Name"
        android:hint="@string/username"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:inputType="text" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:autofillHints="Password"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button android:id="@+id/btnLogin"
        android:text="@string/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button android:id="@+id/btnSignup"
        android:text="@string/signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>
